responsive.css
@media only screen and (max-width: 835px) {
    .wrapper{
      width: 835px;
    }
    .img{
      display: none;
    }
  }

  @media only screen and (max-width: 475px) {

    .wrapper{
      min-width: none;
    }

    article .row{
      flex-wrap: wrap;
      justify-content: center;
    }

  }

